Fixed About section, added contact section, fixed Hannah wrapping issue and updated nav bar text colors

--- a/css/creative.css
+++ b/css/creative.css
@@ -72,24 +72,50 @@ aside {
     padding: 50px 0;
 }
 
+.flip-vertical {
+    display:inline-block;transform: rotateY(180deg);
+}
+
+.hello {
+    color: #EFEFEF;
+}
+
+.inline {
+    display: inline-block;
+}
+
 #about {
     padding: 0px;
+    background-color: #494949;
+}
+.about-container {
+    background-image: url("../img/Moodboard.png");
+    background-size: cover;
+    height: 417px;
+    line-height: 417px;
 }
 
-#about-container {
-    margin-right: 0;
-    margin-left: 0;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-#about-quote {
-    position: absolute;
-    top: 0;
+.about-quote {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
 }
 
 #about-moodboard {
-    left: 0;
+    opacity: 0.5;
+}
+
+#about-paragraph {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.contact-link {
+    color: #494949;
+}
+
+.contact-link:hover {
+    color: #A2728E;
 }
 
 .no-padding {
@@ -109,7 +135,7 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #A2728E;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -122,17 +148,17 @@ aside {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: #222;
+    color: #494949;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #A2728E;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #A2728E!important;
     background-color: transparent;
 }
 
@@ -173,7 +199,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #A2728E;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -183,12 +209,12 @@ aside {
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #222;
+        color: #494949;
     }
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #A2728E;
     }
 }
 
@@ -273,9 +299,9 @@ header .header-content .header-content-inner p {
         margin: 20px auto 0;
     }
 
-    #about-container {
+ /*   #about-container {
         width: 920px;
-    }
+    }*/
 }
 
 .service-box p {
@@ -339,6 +365,13 @@ header .header-content .header-content-inner p {
 
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
         font-size: 22px;
+    }
+}
+
+@media(max-width:767px) {
+    .about-container {
+        height: 200px;
+        line-height: 200px;
     }
 }
 
